<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="pref_active"
            android:title="@string/pref_active_title"
            android:summary="@string/pref_active_summary" />

    <!--
    <ListPreference
            android:key="pref_when"
            android:title="@string/pref_when_title"
            android:entries="@array/pref_when_displays"
            android:entryValues="@array/pref_when_values"
            android:defaultValue="0" />
    -->

    <ListPreference
            android:key="pref_what"
            android:title="@string/pref_what_title"
            android:entries="@array/pref_what_displays"
            android:entryValues="@array/pref_what_values"
            android:defaultValue="0" />

    <com.sndurkin.notificationcheck.NotificationListPreference
            android:key="pref_notifications"
            android:title="@string/pref_notifications_title"
            android:dialogTitle="@string/pref_notifications_title"
            android:entries="@array/pref_what_displays"
            android:entryValues="@array/pref_what_values"
            android:defaultValue="0"/>

    <Preference
            android:key="pref_help"
            android:title="@string/pref_help_title"
            android:summary="@string/pref_help_summary" />

</PreferenceScreen>